Crashes problem solved

--- a/app/src/main/res/layout/fragment_headlines.xml
+++ b/app/src/main/res/layout/fragment_headlines.xml
@@ -9,10 +9,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Headlines."
-        android:textSize="30sp"
+        android:text="@string/headlines"
+        android:textSize="20sp"
         android:fontFamily="serif"
-        android:textColor="@color/purple"
+        android:textColor="@color/blue"
         android:textStyle="bold"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
@@ -27,6 +27,7 @@
         android:paddingBottom="50dp"
         android:layout_marginTop="70dp"
         android:layout_marginStart="8dp"
+        tools:listitem="@layout/item_news"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
