--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,10 +9,10 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Search."
-        android:textSize="30sp"
+        android:text="@string/search"
+        android:textSize="20sp"
         android:fontFamily="serif"
-        android:textColor="@color/purple"
+        android:textColor="@color/blue"
         android:textStyle="bold"
         android:layout_marginStart="8dp"
         android:layout_marginTop="12dp"
@@ -23,7 +23,7 @@
         android:id="@+id/searchEdit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:hint="Search news..."
+        android:hint="@string/search_news"
         android:layout_marginTop="70dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
