--- a/app/src/main/res/layout/item_news.xml
+++ b/app/src/main/res/layout/item_news.xml
@@ -10,6 +10,7 @@
         android:id="@+id/articleImage"
         android:layout_width="160dp"
         android:layout_height="90dp"
+        android:src="@drawable/samplenews"
         android:scaleType="centerCrop"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,7 +20,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
-        android:text="SOURCE"
+        android:text="@string/source"
         android:fontFamily="serif"
         android:textColor="@color/purple"
         app:layout_constraintStart_toStartOf="parent"
@@ -32,7 +33,7 @@
         android:layout_marginStart="8dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="TITLE"
+        android:text="@string/title"
         android:textColor="@color/black"
         android:textSize="15sp"
         android:textStyle="bold"
@@ -48,7 +49,7 @@
         android:layout_marginTop="4dp"
         android:ellipsize="end"
         android:maxLines="2"
-        android:text="DESCRIPTION"
+        android:text="@string/description"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/articleImage"
@@ -59,7 +60,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="12dp"
-        android:text="DATE TIME"
+        android:text="@string/date_time"
         android:textSize="11sp"
         android:layout_marginStart="8dp"
         android:textColor="@color/black"
