--- a/app/src/main/res/menu/bottom_navigation_menu.xml
+++ b/app/src/main/res/menu/bottom_navigation_menu.xml
@@ -11,8 +11,13 @@
         android:title="Favourites"
         android:icon="@drawable/baseline_favorite_24"/>
     <item
-        android:id="@+id/searchFragment"
-        android:title="Search"
-        android:icon="@drawable/baseline_search_24"/>
+        android:id="@+id/categoryFragment"
+        android:title="Category"
+        android:icon="@drawable/baseline_category_24"/>
+
+    <item
+        android:id="@+id/settingFragment"
+        android:title="Setting"
+        android:icon="@drawable/baseline_settings_24"/>
 
 </menu>
